Added circleci config file correction for serverless install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ jobs:
           - v1-dependencies-
 
       - run: npm install
+      - run: sudo npm install -g serverless
+          
 
       - save_cache:
           paths:
