--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           - v1-dependencies-
 
       - run: npm install
-      - run: sudo npm install -g serverless
+      - run: sudo npm install -g serverless@1.29.2
           
 
       - save_cache:
