--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "test": "mocha ./handlerTest.js",
+    "test": "babel-node  ./node_modules/mocha/bin/_mocha -- handlerTest.js",
     "deploy": "serverless deploy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "serverless-offline": "^3.31.3"
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "serverless-offline": "^3.31.3",
+    "serverless-webpack": "^5.2.0"
   },
   "dependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "node-random-name": "^1.0.1",
+    "webpack": "^4.25.1"
   }
 }
